--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -154,3 +154,9 @@
   border: solid;
   border-style: dashed;
   padding: 15px;
+
+.acordion__header
+    background-color: #dee2e6;
+
+.acordion__contenido
+    background-color: #f3f9ff;
