--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -271,3 +271,6 @@ p span
 
 .lista-ol--cuadro__vineta
     background-color: #FFB30B;
+
+.banner-interno__fondo
+  background-image: url('../assets/curso/bg-interno.png') !important
