Ajustes final doble titulacion
Se cargan ajustes finales doble titulacion, ajustes cuadros de texto en el tema 1 y 3

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -161,6 +161,33 @@
 .acordion__contenido
     background-color: #f3f9ff;
 
+.bloque-der
+  .bloque-texto-g__img
+    left: auto
+    right: 0
+    width: 40%
+  .bloque-texto-g
+    justify-content: start
+  .bloque-texto-g__texto--border
+    position: relative
+    width: 57%
+    border: 2px dashed #004B89
+  .bloque-texto-g__texto
+    width: 100%
+
+.bloque-izquierda
+  .bloque-texto-g__img
+    right: auto
+    left: 0
+  .bloque-texto-g
+    justify-content: right
+  .bloque-texto-g__texto--border
+    position: relative
+    width: 57%
+    border: 2px dashed #004B89
+  .bloque-texto-g__texto
+    width: 100%
+
 .bloque-derecha
   .bloque-texto-g__img
     left: auto
@@ -174,12 +201,11 @@
   .bloque-texto-g__texto
     width: 100%
 
-.bloque-izquierda
-  .bloque-texto-g
-    justify-content: start
+.bloque-izq
   .bloque-texto-g__img
-    left: auto
-    right: 0  
+    right: auto
+    left: 0
+    width: 40%
   .bloque-texto-g__texto--border
     position: relative
     width: 57%
