--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -56,23 +56,22 @@
   100%
     transform: scale(1.2)
 
-//// Tarjetas --------------------------------------
+/// Tarjetas --------------------------------------
 .crd
   &.brd--rad
     border-radius: 20px 
   &.crd--grayGrad
     padding: 2rem
     height: 100%
-    background-color: #F6F6F6
-    border-radius: 15px    
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+    background-color: #E8E8E8
+    border-radius: 15px
     &:hover      
-      background: linear-gradient(180deg, rgba(25,137,226,1) 0%, rgba(10,81,139,1) 100%)
+      background: linear-gradient(180deg, #0768b8 0%, rgba(10,81,139,1) 100%)
       h4, p
         color: white 
       .bottomCircle
         &::before
-          background-color: #FED981
+          background-color: #FCCB60
   &.crd--blue
     background-color: #B1DBEA
 
@@ -80,20 +79,20 @@
     border: 4px solid $color-acento-botones
     border-radius: 20px
 
-  .bottomCircle
+.bottomCircle
+  position: relative
+  & > *
     position: relative
-    & > *
-      position: relative
-    &::before
-      content: ""
-      position: absolute
-      top: 50%
-      left: 50%
-      transform: translate(-50%,-50%)
-      width: 115px
-      height: 115px
-      background-color: $color-sistema-texto
-      border-radius: 999px
+  &::before
+    content: ""
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+    width: 115px
+    height: 115px
+    background-color: #004E96
+    border-radius: 999px
 
 .crd--avatarHorizontal
   position: relative
