--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,30 +3,30 @@
     animation: float1 3.5s ease-in-out infinite alternate
     scale: desplazamiento 3.5s ease-in-out infinite alternate
     top: 10%
-    right: 80%
+    right: 70%
   &-2
     width: 60px
     animation: scale 2.8s ease-in-out infinite alternate
     position: absolute
     top: 5%
-    right: 60%
+    right: 55%
   &-3
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
     top: 0%
-    right: 40%
+    right: 44%
   &-4
     width: 60px
     animation: scale 2.8s ease-in-out infinite alternate
     position: absolute
     top: 10%
-    right: 20%
+    right: 30%
   &-5
     width: 75px
     animation: float2 2.4s ease-in-out infinite alternate
     position: absolute
     top: 45%
-    right: 0%
+    right: 20%
 
 
 @keyframes float1
@@ -254,9 +254,10 @@
     z-index: 1
     transform: rotate(180deg) translate(-50%, -50%)
 
-p span
-  color: #FFB30B;
-  font-weight: bold;
+.bloque-texto-g__texto
+  p span
+    color: #FFB30B;
+    font-weight: bold;
 
 .cajon-b:before
   opacity: 0.29;
