--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -300,3 +300,7 @@
 
 .banner-interno__fondo
   background-image: url('../assets/curso/bg-interno.png') !important
+
+
+.cac
+  color: $color-acento-contenido !important  
