--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -304,3 +304,19 @@
 
 .cac
   color: $color-acento-contenido !important  
+
+
+.tabs-a__tab
+  background-color: #B9DDFC
+
+.tabs-a.color-acento-botones .tabs-a__tab__selected 
+  background-color: #084A93 !important
+
+.tabs-a.color-acento-botones .tabs-a__tab__selected:before
+  background-color: #084A93 !important
+
+.tabs-a.color-acento-botones .tabs-a__tab:hover, .tabs-a.color-acento-botones .tabs-a__tab:active, .tabs-a.color-acento-botones .tabs-a__tab:focus
+  background-color: #084A93 !important
+
+.tarjeta.color-acento-botones--borde 
+  border: solid 4px #B9DDFC
